# basic_chess_v2

./: CMakeLists.txt  README.md  chess.cpp  chess.h  chessboard.cpp  chessboard.h  globaldefines.h  graphicsscene.cpp  graphicsscene.h  main.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadtimer.cpp  threadtimer.h
